syntax = "proto3";

package yandex.cloud.events.kms;

import "google/rpc/status.proto";
import "yandex/cloud/events/common.proto";
import "yandex/cloud/validation.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/public-api/yandex/cloud/events/kms;kms";
option java_package = "yandex.cloud.api.events.kms";
option java_outer_classname = "AuditInfoEvents";

message Encrypt {
  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];
  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];
  EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;
  EncryptDecryptDetails details = 7 [(required) = true];

  enum EventStatus {
    EVENT_STATUS_UNSPECIFIED = 0;
    ERROR = 2;
    DONE = 3;
  }
}

message Decrypt {
  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];
  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];
  EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;
  EncryptDecryptDetails details = 7 [(required) = true];

  enum EventStatus {
    EVENT_STATUS_UNSPECIFIED = 0;
    ERROR = 2;
    DONE = 3;
  }
}

message GenerateDataKey {
  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];
  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];
  EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;
  GenerateDataKeyDetails details = 7 [(required) = true];

  enum EventStatus {
    EVENT_STATUS_UNSPECIFIED = 0;
    ERROR = 2;
    DONE = 3;
  }
}

message ReEncrypt {
  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];
  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];
  EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;
  ReEncryptDetails details = 7 [(required) = true];

  enum EventStatus {
    EVENT_STATUS_UNSPECIFIED = 0;
    ERROR = 2;
    DONE = 3;
  }
}

message EncryptDecryptDetails {
  string key_id = 1 [(required) = true];
  string key_name = 2;
  string version_id = 3;
}

message GenerateDataKeyDetails {
  string key_id = 1 [(required) = true];
  string key_name = 2;
  string version_id = 3;
  string algorithm = 4;
}

message ReEncryptDetails {
  string key_id = 1 [(required) = true];
  string key_name = 2;
  string version_id = 3;
  string folder_id = 4;
  string source_key_id = 5;
  string source_key_name = 6;
  string source_version_id = 7;
  string source_folder_id = 8;
}
